# CodeAtlas

./: .env.example  .gitignore  .replit  codeatlas_local.db  project_spec.md  pyproject.toml  replit.md  start.bat  start.sh
backend/: ai_summary.py  feature_assistant.py  graph_builder.py  repo_scanner.py  requirements.txt
backend/app/: __init__.py  auth.py  db.py  dependencies.py  main.py
backend/app/services/: repo_service.py
backend/app/utils/: file_tree.py  git_utils.py
backend/repos/demo_repo.zip-371bde62/demo_repo/pkg/: a.py  b.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AuthModal.tsx  ChatBox.tsx  DependencyGraph.tsx  FeatureAssistantPanel.tsx  RepoSummary.tsx
frontend/src/components/ui/: Panel.tsx
frontend/src/utils/: archGraph.ts
